[package]
name = "scrypt-ocl"
version = "0.7.8"
edition = "2021"

[dependencies]
ocl = "0.19.7"
thiserror = "1.0.61"
post-rs = { path = "../" }
log = "0.4.17"
regex = "1.10.4"

[dev-dependencies]
post-rs = { path = "../" }
rstest = "0.21.0"

[dependencies.spacemesh-cuda]
git = "https://github.com/ZakuroLab/spacemesh-cuda.git"
rev = "c86afcc"
version = "0.0.1"
